[project]
name = "project-euler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anatole", email = "anatole.gosset@eficia.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
]

[project.scripts]
project-euler = "project_euler:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
